Fix Mis-aligned party card after 1440px

--- a/css/main.css
+++ b/css/main.css
@@ -312,6 +312,8 @@ small, .text_small {
   margin-bottom:2rem;
   padding: 0rem 1rem;
 }
+.img-wrap {
+}
 
  /* - - - - - - - - - - - - -  Footer - - - - - - - - - - - - - - -  */
 
@@ -584,7 +586,7 @@ small, .text_small {
 
 .cards .col:nth-child(2n) .card {
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
 }
 
 .card-img {
